--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Hello
 
 <div class="hero-container fond_green_gradient">
    <a href="/info">
-      <div class="hero-pattern hero-start">
-         <div class="hero-pattern-wrap hero-index">
-         </div>
+      <div class="hero-pattern hero-pattern__drl">
+        <div class="hero-pattern-wrap hero-start">
+        </div>
       </div>
    </a>
 </div>
@@ -63,7 +63,7 @@ title: Hello
 <div class="beneath-sections jumbotron fond_blue_gradient">
     <div class="container text__white">
         <div class="col-lg-12 title">
-            <h2>Fragen?</h1>
+            <h2>Fragen? </h1>
                 <p>
                 info@demokratielabore.de<br>
                 +49 (0)30 577 036 660<br>
