--- a/info/index.html
+++ b/info/index.html
@@ -18,30 +18,88 @@ title: "Info"
     </div>
 </div>
 
-
-<div class="beneath-sections jumbotron fond_purple_gradient">
+<div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
-        <div class="col-lg-12 title">
-            <p>
-                ☞ Wir wollen digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.<br>
+        <div class="row goals">
+            <h2 class="text-center">Wir wollen...</h2>
+            <div class="col-lg-4">
+                <p>
+                    ...das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <p>
+                  ...digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.
+                </p>
+            </div>
+            <div class="col-lg-4">
+               <p>                    
+                    ...die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
+                    Menschen bereichern.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
-                ☝ Wir wollen das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.<br>
-
-                ✌ Wir wollen die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
-                Menschen bereichern.
+ <div class="beneath-sections jumbotron fond__white">
+    <div class="container text__black">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h2>Unsere Formate</h2>
+        </div>
+        <div class="col-lg-7 col-lg-offset-2">
+            <p> Wir haben drei verschiedene Formate entwickelt, um die Nachhaltigkeit unseres Vorhabens zu garantieren.
             </p>
+        </div>
+        <div class="col-lg-12">
+            <div class="col-lg-8 col-lg-offset-3">
+                <div class="fond_green_gradient join__statement text__white">
+                    <p>
+                        <b>Workshops</b> <br>
+                        Gemeinsam mit Trägern außerschulischer Jugendhilfe in ganz
+                        Deutschland konzipieren und führen wir unterschiedliche Workshop- und Aktionsformate
+                        durch. Mit Hilfe eines Train-the-Trainer-Konzepts befähigen wir Fachkräfte und
+                        engagierte Jugendliche dazu, die Workshops selbstständig durchzuführen. Um die Qualität
+                        unserer Workshopangebote zu sichern, findet eine kontinuierliche Begleitung durch
+                        (medien-)pädagogische Expert*innen und eine wissenschaftliche Begleitanalyse einer
+                        externen Forschungseinrichtung statt.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-8"> 
+                <div class="fond_red_gradient join__statement text__white">
+                    <p>
+                        <b> Demokratie-AGs</b> <br>
+                        Wir möchten die Entstehung von gesellschaftlich ausgerichteten AGs
+                        in Jugendeinrichtungen unterstützen, in denen Jugendliche zu aktuellen gesellschaftlichen
+                        und digital gestützten Themen arbeiten können. Ein erstes Thema könnte die Bundestagswahl im September
+                        2017 sein. Eine Idee: Gemeinsam Wahldatenparties planen!
+                     </p>
+                </div>
+            </div>
+            <div class="col-lg-8 col-lg-offset-4"> 
+                <div class="fond_purple_gradient join__statement text__white">
+                    <p>
+                        <b> WebTV-Format</b> <br>
+                        Wir wollen in einem WebTV-Format wöchentlich gemeinsam
+                        mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und interessierten
+                        Jugendlichen Sendungen zum Thema Digitalisierung, Technologie und Demokratie produzieren.               
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
  </div>
-    
 
+ <!-- 
 
-<div class="beneath-sections jumbotron fond__grey-bright">
+ <div class="beneath-sections jumbotron fond__grey-bright">
     <div class="container text__black">
-        <div class="row title">
-            <div class="col-lg-12">       
+        <div class="col-lg-12">
+            <h2 class="col-lg-8 col-lg-offset-2">Unsere Formate</h2>
+            <div class="col-lg-8 col-lg-offset-2"> 
                 <p>
-                    <span class="highlight-red" >Workshops</span><br>
+                    <b>Workshops</b> <br>
                     Gemeinsam mit Trägern außerschulischer Jugendhilfe in ganz
                     Deutschland konzipieren und führen wir unterschiedliche Workshop- und Aktionsformate
                     durch. Mit Hilfe eines Train-the-Trainer-Konzepts befähigen wir Fachkräfte und
@@ -50,23 +108,96 @@ title: "Info"
                     (medien-)pädagogische Expert*innen und eine wissenschaftliche Begleitanalyse einer
                     externen Forschungseinrichtung statt.
                 </p>
-
-                <p>                    
-                    <span class="highlight-cyan">Demokratie-AGs:</span><br>
+            </div>
+            <div class="col-lg-8 col-lg-offset-1"> 
+                <p>
+                    <b> Demokratie-AGs</b> <br>
                     Wir möchten die Entstehung von gesellschaftlich ausgerichteten AGs
                     in Jugendeinrichtungen unterstützen, in denen Jugendliche zu aktuellen gesellschaftlichen
                     und digital gestützten Themen arbeiten können. Ein erstes Thema könnte die Bundestagswahl im September
                     2017 sein. Eine Idee: Gemeinsam Wahldatenparties planen!
-                </p>
-
+                 </p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-3"> 
                 <p>
-                    <span class="highlight-blue">WebTV-Angebot - YouTube-Channel:</span><br>
+                    <b> WebTV-Format</b> <br>
                     Wir wollen in einem WebTV-Format wöchentlich gemeinsam
                     mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und interessierten
-                    Jugendlichen Sendungen zum Thema Digitalisierung, Technologie und Demokratie produzieren.
+                    Jugendlichen Sendungen zum Thema Digitalisierung, Technologie und Demokratie produzieren.               
                 </p>
             </div>
         </div>
-    </div>     
+    </div>
+ </div>
+
+
+
+
+
+
+
+
+<div class="beneath-sections jumbotron fond__grey-bright ">
+    <div class="container text__black">
+        <div class="row">
+            <h2 class="text-center">Unsere Ziele</h2>
+            <div class="col-lg-4 text-center">
+                <p><span class="highlight-blue" > ☝ <br> Wir wollen das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.
+                </span>
+                </p>
+            </div>
+            <div class="col-lg-4 text-center">
+                <p>
+                    <span class="highlight-purple">  ✌ <br> Wir wollen digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.</span>
+                </p>
+            </div>
+            <div class="col-lg-4 text-center">
+               <p>                    
+                    <span class="highlight-cyan"> ☞ <br> Wir wollen die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
+                    Menschen bereichern.</span>
+                </p>
+            </div>
+
+        </div>
+    </div>
 </div>
 
+
+ <div class="beneath-sections jumbotron fond__grey-bright">
+    <div class="container text__black">
+        <div class="col-lg-12">
+            <h2 class="col-lg-8 col-lg-offset-2">Unsere Formate</h2>
+            <div class="col-lg-8 col-lg-offset-2"> 
+                <p>
+                    <b>Workshops</b> <br>
+                    Gemeinsam mit Trägern außerschulischer Jugendhilfe in ganz
+                    Deutschland konzipieren und führen wir unterschiedliche Workshop- und Aktionsformate
+                    durch. Mit Hilfe eines Train-the-Trainer-Konzepts befähigen wir Fachkräfte und
+                    engagierte Jugendliche dazu, die Workshops selbstständig durchzuführen. Um die Qualität
+                    unserer Workshopangebote zu sichern, findet eine kontinuierliche Begleitung durch
+                    (medien-)pädagogische Expert*innen und eine wissenschaftliche Begleitanalyse einer
+                    externen Forschungseinrichtung statt.
+                </p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-1"> 
+                <p>
+                    <b> Demokratie-AGs</b> <br>
+                    Wir möchten die Entstehung von gesellschaftlich ausgerichteten AGs
+                    in Jugendeinrichtungen unterstützen, in denen Jugendliche zu aktuellen gesellschaftlichen
+                    und digital gestützten Themen arbeiten können. Ein erstes Thema könnte die Bundestagswahl im September
+                    2017 sein. Eine Idee: Gemeinsam Wahldatenparties planen!
+                 </p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-3"> 
+                <p>
+                    <b> WebTV-Format</b> <br>
+                    Wir wollen in einem WebTV-Format wöchentlich gemeinsam
+                    mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und interessierten
+                    Jugendlichen Sendungen zum Thema Digitalisierung, Technologie und Demokratie produzieren.               
+                </p>
+            </div>
+        </div>
+    </div>
+ </div>
+
+  -->
