--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -12,12 +12,105 @@ title: "Für Jugendeinrichtungen"
             <div class="col-lg-12 title">
                 <!--<h1>Jugendeinrichtungen, macht mit!</h1>-->
                 <p>
-                    Jugendeinrichtungen, wir brauchen eure Unterstützung! Du bist Mitarbeiter oder Leiter einer Jugendeinrichtung und denkst unser Konept würde zu euch passen? Wunderbar, scheue dich nicht das Telefon in die Hand zu nehmen uns anzurufen oder eine Mail zu schreiben. Wir freuen uns. 
+                   Mit den Demokratielabore richten wir uns konkret an zwei Zielgruppen: Zum einen Jugendliche & junge Erwachsene zwischen 12 und 21 Jahren, die Lust haben Neues zu probieren und zum anderen an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben die Formate bei sich umzusetzen.
                 </p>   
+            </div>
+            <div class="col-lg-8 col-lg-offset-4">
+                <p>
+                      Während für die Jugendlichen die Inhalte der Angebote im Vordergrund stehen, möchten wir die kooperierenden Einrichtungen durch Qualifikationsmöglichkeiten in den Bereichen Digitalisierung und Technologie unterstützen. Im Fokus aller Aktivitäten steht der Gebrauch von digitalen Werkzeugen und Technologien zur Beteiligung an gesellschaftlichen Prozessen - egal ob international oder hyperlokal. Wichtig ist uns, eine möglichst hohe Diversität zu erreichen: Wir wollen mit Jugendeinrichtungen in ganz Deutschland zusammenarbeiten, egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel. Jede*r ist bei uns willkommen!
+                </p>
             </div>
         </div>
     </div>
 </div>
+
+<!-- A
+<div class="beneath-sections jumbotron fond__grey-bright">
+    <div class="container text__black">
+        <div class="col-lg-12">
+            <h2>  Wie kann man als Fachkraft oder Jugendeinrichtung bzw. Jugendverband bei den Demokratielaboren mitmachen?</h2>
+            <div class="col-lg-7 col-lg-offset-2">
+                <p>
+                    <b>Schritt 1:</b> <br>
+                    Tretet mit uns in Kontakt und füllt dieses kurze [Formular] aus! Wir melden uns zeitnah bei Euch. 
+                </p>
+            </div>
+            <div class="col-lg-7 col-lg-offset-1"> 
+                <p>
+                    <b> Schritt 2:</b> <br>
+                    Gemeinsam wählen wir in persönlichen Gesprächen die [Workshop- und Aktionsformate] aus, die ihr in eurer Einrichtung bzw. eurem Verband anbieten möchtet. Im Anschluss vereinbaren wir  die Fortbildungs- und Durchführungstermine. 
+
+                 </p>
+            </div>
+            <div class="col-lg-7 col-lg-offset-3">
+                <p>
+                    <b>Schritt 3: </b> <br>
+                    Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchführung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchführung in eurer Einrichtung stehen wir euch deshalb gerne  zur Seite und können euch für weitere Durchläufe sowohl umfangreiche Materialien   als auch finanzielle Unterstützung. anbieten.         
+                </p>
+            </div>
+             <div class="col-lg-9"> 
+                <p>
+                    Im weiteren Verlauf helfen wir euch (bei Interesse) dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten eine Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities geschehen. Auch hierfür stehen unterstützend finanzielle Mittel zur Verfügung.      
+                </p>
+                
+            </div>
+        </div>
+    </div>
+ </div>
+ </div>
+ </div>
+
+-->
+
+
+ <div class="beneath-sections jumbotron fond__grey-bright">
+    <div class="container text__black">
+        <div class="col-lg-12">
+            <h2>  Wie kann man als Fachkraft oder Jugendeinrichtung bzw. Jugendverband bei den Demokratielaboren mitmachen?</h2>
+            <div class="col-lg-9 col-lg-offset-2">
+                <div class="fond_red_gradient join__statement text__white">
+                    <p>
+                        <b>Schritt 1:</b> <br>
+                        Tretet mit uns in Kontakt und füllt dieses kurze [Formular] aus! Wir melden uns zeitnah bei Euch. 
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-9 "> 
+                <div class="fond_purple_gradient join__statement text__white">
+                    <p>
+                        <b> Schritt 2:</b> <br>
+                        Gemeinsam wählen wir in persönlichen Gesprächen die [Workshop- und Aktionsformate] aus, die ihr in eurer Einrichtung bzw. eurem Verband anbieten möchtet. Im Anschluss vereinbaren wir  die Fortbildungs- und Durchführungstermine. 
+
+                     </p>
+                </div>
+            </div>
+            <div class="col-lg-9 col-lg-offset-3">
+                <div class="fond_blue_gradient join__statement text__white"> 
+                    <p>
+                        <b>Schritt 3: </b> <br>
+                        Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchführung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchführung in eurer Einrichtung stehen wir euch deshalb gerne  zur Seite und können euch für weitere Durchläufe sowohl umfangreiche Materialien   als auch finanzielle Unterstützung. anbieten.         
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+ </div>
+
+
+ <div class="beneath-sections jumbotron fond__grey-bright">
+    <div class="container text__black">
+        <div class="col-lg-8"> 
+            <p>
+                Im weiteren Verlauf helfen wir euch (bei Interesse) dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten eine Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities geschehen. Auch hierfür stehen unterstützend finanzielle Mittel zur Verfügung.      
+            </p>
+       </div>
+    </div>
+ </div>
+
+
+
+
+
 
 <div class="beneath-sections jumbotron fond_green_gradient">
     <div class="container text__white">
@@ -37,3 +130,4 @@ title: "Für Jugendeinrichtungen"
     </div>
 </div>
 
+</div>
