--- a/team/index.html
+++ b/team/index.html
@@ -13,7 +13,8 @@ title: "Über uns"
             <div class="col-lg-11 title">
                 <!--<h1>Über uns</h1>-->
                 <p>
-                    Die <a href="https://okfn.de">Open Knowledge Foundation Deutschland </a>ist seit ihrer Gründung 2011 Vorreiter und Impulsgeber im digitalen bürgerschaftlichen Engagement. Da das nötige Repertoire an digitalen Fähigkeiten, um sich an demokratischen und gesellschaftlichen Prozessen zu beteiligen, weder in der Schule noch im außerschulischen Bildungsbereich ausreichend gelehrt wird, haben wir die Demokratielabore ins Leben gerufen.
+                    Der <a href="https://okfn.de">Open Knowledge Foundation Deutschland e.V.</a> ist seit der Gründung 2011 ein Vorreiter und Impulsgeber im digitalen zivilgesellschaftlichen Engagement. Mit den Demokratielaboren haben wir ein Projekt ins Leben gerufen, dass an der Grundidee des preisgekrönten OKF-Förderprogramms Jugend hackt ansetzt: Jugendliche verschiedener Gesellschaftsgruppen zum Einsatz ihrer technischen Fähigkeiten für die Demokratie begeistern!
+
                 </p>
             </div>
         </div>
@@ -37,12 +38,26 @@ title: "Über uns"
 -->
 
             <div class="beneath-sections">
+                <h1>Das sind wir</h1>
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Sebastian Seitz" src="/img/avatars/sebastian.jpg">
+                    <a href="mailto:sebastian.seitz@okfn.de"> <img class="img-circle member-avatar" alt="Sebastian Seitz" src="/img/avatars/sebastian.jpg"></a>
                     <p>
                          <span class="speaker-name"><a class="text__blue" href="mailto:sebastian.seitz@okfn.de">Sebastian Seitz</a></span>Projektleiter <br> sebastian.seitz@okfn.de
                     </p>
                 </div>
+                <div class="members col-lg-4">
+                    <img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg">
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
+                    </p>
+                </div>    
+                <div class="members col-lg-4">
+                    <img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg">
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin <br> paula.glaser@okfn.de
+                    </p>
+                </div>    
+
 
                 <div class="members col-lg-4">
                     <img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg">
@@ -70,17 +85,44 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg">
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Interactiondesignerin <br> nadine.stammen@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design Lead<br> nadine.stammen@okfn.de
                     </p>
                     </p>
                 </div>
-
+  
                 <div class="members col-lg-4">
                     <img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg">
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>studentischer Mitarbeiter <br> leonard.wolf@okfn.de
                     </p>
                 </div>    
+            </div> 
+        </div>             
+    </div>
+</div>
+<div class="beneath-sections jumbotron fond__white">
+    <div class="col-lg-12">
+        <div class="container text__black">
+            <div class="beneath-sections">
+            <h1>Datenkompetenz für NGOs</h1>
+                <div class="members col-lg-4">
+                    <img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/helene.jpg">
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Projektleitung <br> helene.hahn@okfn.de
+                    </p>
+                </div>  
+                <div class="members col-lg-4">
+                    <img class="img-circle member-avatar" alt="Knut Perseke" src="/img/avatars/knut.jpg">
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Tech Lead<br> knut.perseke@okfn.de
+                    </p>
+                </div>  
+                <div class="members col-lg-4">
+                    <img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg">
+                    <p>
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Workshopkonzeption <br> moritz.neujeffski@okfn.de
+                    </p>
+                </div> 
             </div> 
         </div>             
     </div>
