--- a/workshops/index.html
+++ b/workshops/index.html
@@ -12,7 +12,7 @@ title: "Workshopformate"
                 <!--<h1>Unsere Workshopformate</h1>-->
                
                 <p class="text">
-                    Es gibt fünf verschiedene mehrstufige Workshopformate, die wir in enger Zusammenarbeit mit den kooperierenden Jugendeinrichtungen ausarbeiten, damit diese auf die Teilnehmerinnen abgestimmt sind. 
+                    Gemeinsam mit außerschulischen Jugendeinrichtungen in ganz Deutschland führen wir fünf unterschiedliche Workshop- und Aktionsformate rund ums Thema Demokratie und Technologie durch. 
                 </p>
             </div>
         </div>
@@ -27,7 +27,7 @@ title: "Workshopformate"
 
                 <div class="format__statement text__white">
                      <p class="format__statement-elaboration">
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                       Argumente gegen Trolle - Teilnehmende verwandeln sich in diesem Workshop in digitale Abenteuer-Gruppen, welche bewaffnet mit Würfeln, Stiften und Papier sowie der helfenden Stimme des Dungeonmasters, Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trollwesen helfen aber weder Schwerter noch Zauber, dazu wollen Redefähigkeiten erlernt und richtig eingesetzt werden.
                     </p>
                 </div>
             </div>   
