--- a/index.html
+++ b/index.html
@@ -18,10 +18,33 @@ title: Hello
         <div class="row">
             <div class="col-lg-12 title">
                 <p>
-                    Die Demokratielabore sind ein mehrstufiges, modulares Modellprojekt, das einer breiten Zielgruppe von Jugendlichen im Alter von  12 bis 21 Jahren Selbstwirksamkeitserfahrungen im Bereich von Demokratie und Technologie ermöglichen will.
+                    Die Demokratielabore sind ein Modellprojekt des Open Knowledge Foundation Deutschland e.V., das Jugendlichen im Alter von 12 bis 21 Jahren Spaß an digitalen Werkzeugen und Technologien vermitteln will, die es ermöglichen, sich besser an gesellschaftlichen Prozessen zu beteiligen und sie aktiv mitzugestalten. <br>
                     <a href="/info"><button  class="btn btn-start">Mehr erfahren!</button> </a> 
 
                 </p>   
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="beneath-sections jumbotron fond_darkblue_gradient">
+    <div class="container text__white">
+        <div class="row title">
+            <p>Unsere Ziele</p>
+            <div class="col-lg-4">
+                <p>Wir wollen das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <p>
+                  Wir wollen digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.
+                </p>
+            </div>
+            <div class="col-lg-4">
+               <p>                    
+                    Wir wollen die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
+                    Menschen bereichern.
+                </p>
             </div>
         </div>
     </div>
@@ -57,13 +80,14 @@ title: Hello
         </div>
     </div>
 </div>
-</div>
-</div>
+</div></div>
 
-<div class="beneath-sections jumbotron fond_blue_gradient">
+
+
+<div class="beneath-sections jumbotron fond_green_gradient">
     <div class="container text__white">
         <div class="col-lg-12 title">
-            <h2>Fragen? </h1>
+            <h2>Fragen?  </h1>
                 <p>
                 info@demokratielabore.de<br>
                 +49 (0)30 577 036 660<br>
