--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@ title: Hello
 
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
-        <div class="row title">
-            <p>Unsere Ziele</p>
+        <div class="row goals">
+            <h2 class="text-center">Wir wollen...</h2>
             <div class="col-lg-4">
-                <p>Wir wollen das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.
+                <p>
+                    ...das Internet für und mit jungen Zielgruppen als positiven Gestaltungsraum zurückerobern.
                 </p>
             </div>
             <div class="col-lg-4">
                 <p>
-                  Wir wollen digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.
+                  ...digitale Fähigkeiten vermitteln, die es Kindern und Jugendlichen ermöglichen, sich selbstbestimmt und aktiv an demokratischen Prozessen zu beteiligen.
                 </p>
             </div>
             <div class="col-lg-4">
                <p>                    
-                    Wir wollen die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
+                    ...die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven junger
                     Menschen bereichern.
                 </p>
             </div>
