--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -12,7 +12,7 @@ title: "Für Jugendeinrichtungen"
             <div class="col-lg-12 title">
                 <!--<h1>Jugendeinrichtungen, macht mit!</h1>-->
                 <p>
-                   Mit den Demokratielabore richten wir uns konkret an zwei Zielgruppen: Zum einen Jugendliche & junge Erwachsene zwischen 12 und 21 Jahren, die Lust haben Neues zu probieren und zum anderen an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben die Formate bei sich umzusetzen.
+                   Mit den Demokratielabore richten wir uns konkret an zwei Zielgruppen: Zum einen Jugendliche & junge Erwachsene zwischen 12 und 21 Jahren, die Neues zu probieren wollen, und zum anderen an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben die Formate bei sich umzusetzen.
                 </p>   
             </div>
             <div class="col-lg-8 col-lg-offset-4">
