--- a/team/index.html
+++ b/team/index.html
@@ -38,7 +38,7 @@ title: "Über uns"
 -->
 
             <div class="beneath-sections">
-                <h1>Das sind wir</h1>
+                <h1>Und das sind wir</h1>
                 <div class="members col-lg-4">
                     <a href="mailto:sebastian.seitz@okfn.de"> <img class="img-circle member-avatar" alt="Sebastian Seitz" src="/img/avatars/sebastian.jpg"></a>
                     <p>
@@ -46,13 +46,13 @@ title: "Über uns"
                     </p>
                 </div>
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg">
+                    <a href="mailto:maria.reimer@okfn.de"><img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
                     </p>
                 </div>    
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg">
+                    <a href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin <br> paula.glaser@okfn.de
                     </p>
@@ -60,14 +60,14 @@ title: "Über uns"
 
 
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg">
+                    <a href="mailto:matthias.loewe@okfn.de"><img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a></span>Projektmanager <br> matthias.loewe@okfn.de
                     </p>
                 </div>
 
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Saadya Windauer" src="/img/avatars/saadya.jpg">
+                    <a href="mailto:saadya.windauer@okfn.de"><img class="img-circle member-avatar" alt="Saadya Windauer" src="/img/avatars/saadya.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue" href="mailto:saadya.windauer@okfn.de">Saadya Windauer</a> </span>Projektmanagerin <br> saadya.windauer@okfn.de
                     </p>
@@ -76,14 +76,14 @@ title: "Über uns"
 
             <div class="beneath-sections">
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg">
+                    <a href="mailto:jasmin.helm@okfn.de"><img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span>Projektmanagerin <br> jasmin.helm@okfn.de
                     </p>
                 </div>
 
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg">
+                    <a href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Design Lead<br> nadine.stammen@okfn.de
                     </p>
@@ -91,7 +91,7 @@ title: "Über uns"
                 </div>
   
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg">
+                    <a href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>studentischer Mitarbeiter <br> leonard.wolf@okfn.de
                     </p>
@@ -106,19 +106,19 @@ title: "Über uns"
             <div class="beneath-sections">
             <h1>Datenkompetenz für NGOs</h1>
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/helene.jpg">
+                    <a href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/helene.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Projektleitung <br> helene.hahn@okfn.de
                     </p>
                 </div>  
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Knut Perseke" src="/img/avatars/knut.jpg">
+                    <a href="mailto:knut.perseke@okfn.de"><img class="img-circle member-avatar" alt="Knut Perseke" src="/img/avatars/knut.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Tech Lead<br> knut.perseke@okfn.de
                     </p>
                 </div>  
                 <div class="members col-lg-4">
-                    <img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg">
+                    <a href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
                     <p>
                         <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Workshopkonzeption <br> moritz.neujeffski@okfn.de
                     </p>
