--- a/workshops/index.html
+++ b/workshops/index.html
@@ -74,7 +74,7 @@ title: "Workshopformate"
                 </div>
             </div>   
 
-            <div class="format__point_five fond_purple_gradient">
+            <div class="format__point_five fond_darkblue_gradient">
                 <div class="format__illustration-wrapper">
                     <div class="format__illustration">
                         <svg xmlns="http://www.w3.org/2000/svg"  height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>
@@ -87,6 +87,25 @@ title: "Workshopformate"
                     </p>
                 </div>
             </div> 
+        </div>
+    </div>
+</div>
+
+<div class="beneath-sections jumbotron fond_green_gradient">
+    <div class="container text__white">
+        <div class="col-lg-12 title">
+            <h2>Fragen?</h1>
+                <p>
+                info@demokratielabore.de<br>
+                +49 (0)30 577 036 660<br>
+                Singerstraße 109<br>
+                10179 Berlin<br><br>
+
+                <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
+                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram, </a>
+                <a class="text__white" href="https://facebook.com/demokratielabs">Facebook </a>
+
+            </p>
         </div>
     </div>
 </div>
