--- a/info/index.html
+++ b/info/index.html
@@ -91,6 +91,26 @@ title: "Info"
     </div>
  </div>
 
+<div class="beneath-sections jumbotron fond_green_gradient">
+    <div class="container text__white">
+        <div class="col-lg-12 title">
+            <h2>Fragen?</h1>
+                <p>
+                info@demokratielabore.de<br>
+                +49 (0)30 577 036 660<br>
+                Singerstraße 109<br>
+                10179 Berlin<br><br>
+
+                <a class="text__white" href="https://twitter.com/demokratielabs">Twitter, </a> 
+                <a class="text__white" href="https://instagram.com/demokratielabs">Instagram, </a>
+                <a class="text__white" href="https://facebook.com/demokratielabs">Facebook </a>
+
+            </p>
+        </div>
+    </div>
+</div>
+
+
  <!-- 
 
  <div class="beneath-sections jumbotron fond__grey-bright">
