new description team

--- a/team/index.html
+++ b/team/index.html
@@ -108,7 +108,7 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <a href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/helene.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Projektleitung <br> helene.hahn@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modulleitung <br> helene.hahn@okfn.de
                     </p>
                 </div>  
                 <div class="members col-lg-4">
@@ -120,7 +120,7 @@ title: "Über uns"
                 <div class="members col-lg-4">
                     <a href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
                     <p>
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Workshopkonzeption <br> moritz.neujeffski@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Modulmanagement <br> moritz.neujeffski@okfn.de
                     </p>
                 </div> 
             </div> 
